macOS Safari 15.2 Audio Echo Issue after camera pause/unpause https://bugs.webkit.org/show_bug.cgi?id=235544 <rdar://problem/88297045>

Reviewed by Eric Carlson.

Source/WebCore:

After https://commits.webkit.org/r275600, the muted state of MediaPlayer would be set to the page muted state
without taking into consideration HTMLMediaElement.muted.
Update the call site to use effectiveMuted instead.
Add internals API to write a corresponding layout test.

Test: fast/mediastream/mediastreamtrack-audiovideo-mutepage.html

* html/HTMLMediaElement.cpp:
* testing/Internals.cpp:
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

* fast/mediastream/mediastreamtrack-audiovideo-mutepage-expected.txt: Added.
* fast/mediastream/mediastreamtrack-audiovideo-mutepage.html: Added.



Canonical link: https://commits.webkit.org/248022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290778 268f45cc-cd09-0410-ab3c-d52691b4dbfc